--- a/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/running_eclipse.htm
@@ -312,7 +312,10 @@ The general form of running the Eclipse executable is:</p>
 
 <p>All arguments following (but not including) the -vmargs entry are passed
 directly through to the indicated Java VM as virtual machine arguments (that is,
-before the class to run).</p>
+before the class to run).  <b>Note:</b> If an Eclipse startup argument, such as -data,
+is provided after the Java vm arguments (-vmargs), Eclipse will not start and you will receive 
+a &quot;JVM terminated. Exit code=1&quot; error.
+</p>
 
 <h2>Running on Different VMs&nbsp;</h2>
 <h3>Running Eclipse on J9</h3>
