--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
@@ -24,9 +24,10 @@ Open your operating system's file system explorer.</P>
 Drag the file JanesFile.txt from the Navigator to the file system explorer.</P>
   </li>
   <li>
-    <P CLASS="Para"> Notice that the file is copied to the destination in the file 
-      system. You can do a move instead of a move by selecting Shift before or during the
-      drag.</P>
+    <P CLASS="Para">Hold down the Ctrl key while dragging to ensure the file is copied.
+    Otherwise, depending on your operating system, the file may be removed from the 
+    workspace.
+</P>
   </li>
   <li>
 <p CLASS="Para">
