updated to new Compare pref UI

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
@@ -63,6 +63,15 @@ editors behave:
       <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
           Off</P></TD>
     </TR>
+    <TR> 
+      <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
+          Automatically save dirty options before patching</P></TD>
+      <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para">
+      	  This option controls whether any unsaved changes are automatically saved before
+      	  a patch is applied.</P></TD>
+      <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
+          Off</P></TD>
+    </TR>
   </TBODY>
 </TABLE>
 
@@ -114,12 +123,12 @@ Off</P>
     </TR>
     <TR> 
       <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
-          Text Font</P></TD>
+          Connect ranges with single line</P></TD>
       <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
-          Click the <b> Change</b> push button to change the default font for 
-          the comparison viewers.</P></TD>
+          Controls whether differing ranges are visually connected by a single
+          line or a range delimited by two lines.</P></TD>
       <TD ROWSPAN="1" COLSPAN="1" valign="top" align="left"> <P CLASS="Para"> 
-          Using Workbench Text Font</P></TD>
+          On</P></TD>
     </TR>
   </TBODY>
 </TABLE>
