--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -38,8 +38,7 @@
      <a href="../reference/ref-51.htm">Debug view</a><a href="../reference/ref-4.htm"><br>
     Run menu</a><br>
      <a href="../reference/ref-4.htm">Run and debug actions</a><br>
-     <a href="../reference/ref-debugappearance.htm">Debug Appearance<br>
-    </a><a href="../reference/ref-35.htm">Breakpoints view</a><br>
+     <a href="../reference/ref-35.htm">Breakpoints view</a><br>
     </p>
 
     <p><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a></p>
