*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -42,9 +42,19 @@
         line to be executed is invoked, and execution suspends at the next executable line in the method that is invoked.
       </li>
     </ol>
-    <h2>
-      Run to return
-    </h2>
+    
+<h2> Step into Selection</h2>
+<ol>
+  <li> Select a stack frame in the Debug view. The current line of execution in 
+    the selected frame is highlighted in the editor in the Debug perspective. 
+  </li>
+  <li>In the Java editor, within the current line of execution, place the cursor 
+    on the name of a method that you would like to step into.</li>
+  <li> Click the <strong>Step into Selection </strong>action in the Run menu or 
+    Java editor context menu, or press the <kbd>Ctrl-F5</kbd> key. Execution resumes 
+    until the selected method is invoked. </li>
+</ol>
+<h2>Run to return </h2>
     <ol>
       <li>
         Select a stack frame in the Debug view. The current line of execution in the selected frame is highlighted in the editor in the Debug perspective.
