--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -31,6 +31,9 @@ understand how to use the platform debug support is to study a robust concrete
 implementation of launching and debugging, such as the JDT launching and debug
 tools.&nbsp; We'll review the major concepts of the platform debug support in
 order to provide a roadmap for studying a concrete implementation.</p>
+<p>For a detailed explanation of how to define and develop custom launch
+configurations, see
+ <a href="http://www.eclipse.org/articles/Article-Launch-Framework/launch.html">We Have Lift-off: The Launching Framework in Eclipse</a>.</p>
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corporation and others 2000, 2003." border="0" width="324" height="14"></a></p>
 </BODY>
 </HTML>
