--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
@@ -104,7 +104,7 @@ manner.&nbsp;&nbsp;</P>
 views should be specified by the id used in their <b><a href="../reference/extension-points/org_eclipse_ui_views.html">org.eclipse.ui.views</a></b>
 extension contribution.&nbsp;&nbsp; This controls which views are available as
 targets in the <b>Navigate &gt; Show In </b>menu.&nbsp; The ability to specify a
-&quot;show in&quot; view in the extension markup provides allows you to add your
+&quot;show in&quot; view in the extension markup allows you to add your
 newly contributed views as targets in another perspective's &quot;show in&quot;
 menus.&nbsp; See <a href="workbench_perspectives.htm#showin">Linking views and
 editors</a> for more information on &quot;show in.&quot;</P>
