Added width and height

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -148,7 +148,7 @@
 			<td valign="top" align="right"><b>Use Quick Fix to handle exceptions</b></td>
 			<td valign="top">Dealing with thrown exceptions is made
 			easy. Unhandled exceptions are detected while typing and marked with
-			a red line in the editor.
+			a red line in the editor. 
 			<ul>
 				<li>Click on the light bulb or press <b>Ctrl+1</b> to surround the
 				call with a try catch block. If you want to include more statements
@@ -215,8 +215,8 @@
 		<tr>
 			<td valign="top" align="right"><b>More speed in the Java editor</b></td>
 			<td valign="top">You can speed up typing by:
-			<ul>
-
+        <ul>
+				
 				<li>Turning off problem indicators that appear while typing. Clear
 				all check boxes in <strong>Window / Preferences / Java / Editor /
 				Annotations.</strong></li>
@@ -310,7 +310,7 @@
 				string</strong>.&nbsp;</li>
 				<li>Select <strong>Method</strong> and <strong>Declarations</strong>
 				and then click <strong>Search.</strong></li>
-
+				
 			</ol>
 			<img border="0" src="images/search-returntype.gif"
 				alt="Search for method with given return type"></td>
@@ -336,7 +336,7 @@
 				/ Java / Editor / Navigation</b>.</li>
 			</ul>
 			</td>
-		</tr>	
+		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>In-place outlines</b></td>
 			<td valign="top" align="left" width="80%">Press <b>Ctrl+F3 (Navigate
@@ -345,7 +345,7 @@
 			(Edit / Open Structure)</b> to pop up an in-place outline of the
 			current source file. <img border="0" src="images/inplace_outline.gif"
 				alt="Inplace Outline"></td>
-		</tr>	
+		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Reminders in your Java
 			code</b></td>
@@ -422,9 +422,13 @@
 				<li>You can drag-and-drop an element onto the Hierarchy view to
 				focus it on that element.</li>
 				<li>You can change the orientation (from the default vertical to
-				horizontal) of the Hierarchy view by using the Menu tool bar button.
+				horizontal) of the Hierarchy view by using the Menu toolbar button.
 				</li>
 			</ul>
+
+
+
+
 			</td>
 		</tr>
 		<tr>
@@ -491,9 +495,9 @@
 
 	</tbody>
 </table>
-<p><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif"
-	alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved."
-	border="0"></a></p>
+<p> 
+      <a href="../hglegal2003.htm"><IMG SRC="../images/ngibmcpy2003.gif" WIDTH=324 HEIGHT=14 alt="Copyright (c) 2000, 2003 IBM Corporation and others. All Rights Reserved." border="0"></a>
+	</p>
 
 </body>
 </html>
