added entry "Comparing zip archives..."

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -303,6 +303,23 @@
     the Perspective's menus and toolbar.
     <p><img border="0" src="images/perspective-other.gif" alt="Customizing action sets"></p></td>
   </tr>
+  
+  <tr>
+	<td valign="top" align="right" width="20%">
+		<strong>Comparing zip archives with each other or with a folder</strong>
+	</td>
+    <td valign="top" align="left" width="80%">
+        Select two zip archives or one archive and a folder in the resource Navigator view
+        and choose <strong>Compare With &gt; Each Other</strong> from the view's popup menu.
+        Any differences between the two inputs are opened into a Compare editor. The top pane
+        shows all the archive entries that differ. Double clicking on an item performs a
+        content compare in the bottom pane.
+        <p>
+        This works in any context where a file comparison is involved. So if a CVS Synchronize
+        operation lists an archive in the resource tree, you can double click on it in order
+        to drill down into changes within the archive.
+	</td>
+  </tr> 
 </table>
 
 <h3>Ant</h3>
