*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -33,8 +33,8 @@
 <ul>
   <li><a href="../guide/jdt_int_ui.htm">What is available in the JDT UI packages?</a> 
   </li>
-  <li><a href="../guide/jdt_api_open_editor.htm">How do I programmatically launch 
-    a Java editor on a file?</a> </li>
+  <li><a href="../guide/jdt_api_open_editor.htm">How do I programmatically open 
+    a Java editor and display a specific Java element in the editor?</a> </li>
   <li><a href="../guide/jdt_api_prompter.htm">How do I programatically open 
     the Open Type dialog?</a> <br>
   </li>
