--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -11,7 +11,7 @@
   <body>
     <h1>Java search</h1>
 
-    <p><span>The Java searching support allows you to find declarations and references of Java elements
+    <p><span>The Java searching support allows you to find declarations, references and occurrences of Java elements
     (packages, types, methods, fields). Searching is supported by an index that
     is kept up to date in the background as the resources corresponding to Java elements are changed.
     The Java search operates on workspaces independent of their build state. For
@@ -82,6 +82,17 @@
             <p>Finds all write accesses to the selected Java field</p>
           </td>
         </tr>
+
+        <tr>
+          <td valign="top">
+            <p>Occurrences in File</p>
+          </td>
+
+          <td valign="top">
+            <p>Finds all occurrences of the selected Java element in its file</p>
+          </td>
+        </tr>
+
       </tbody>
     </table>
 
