updated local history tips

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -230,14 +230,30 @@
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Use the local history
+			to revert back to a previous edition of a method</b></td>
+			<td valign="top" align="left" width="80%">Whenever you
+			edit a file, its previous contents is kept in the local history.
+			Java tooling makes the local history available for Java elements,
+			so you can revert back to a previous edition of a single method
+			instead of the full file only.
+			<p>			
+			Select an element and use <strong>Replace With &gt; Local History</strong> to revert
+			back to a previous edition of the element.
+			<p>
+			<img border="0" src="images/localhistory-replace.gif" alt="Replace form local history dialog"></td>
+		</tr>
+		<tr>
+			<td width="20%" valign="top" align="right"><b>Use the local history
 			to restore removed methods</b></td>
-			<td valign="top" align="left" width="80%">Don't forget that all
-			previous contents of your files are kept in the local history. Select
-			an element and use <b>'Replace With / Local History'</b> to revert
-			back to a previous edition of the element.<br>
-			To restore removed members use <b>Restore From Local History</b>. <br>
-			<img border="0" src="images/multiple-restore.gif"
-				alt="Local history window"></td>
+			<td valign="top" align="left" width="80%">Whenever you
+			edit a file, its previous contents is kept in the local history.
+			Java tooling makes the local history available for Java elements,
+			so you can restore deleted methods selectively.
+			<p>			
+			Select a container and use <strong>Restore from Local History</strong>
+			to restore any removed members.
+			<p>
+			<img border="0" src="images/localhistory-restore.gif" alt="Restore from local history dialog"></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Customizable code
