*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout1.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Several sibling products in common source tree
+      Sibling products in a common source tree
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Several sibling products in common source tree
+      Sibling products in a common source tree
     </h1>
 
 	<p>The source files for the company's products are laid out in one big directory that is version and configuration managed outside Eclipse:
@@ -68,7 +68,6 @@
       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-45.htm">Using the Package Explorer</a><br>
-       <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
        <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>       
     </p>
