--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
@@ -17,6 +17,51 @@
 	</p>
 	<p><img src="../images/qs-WorkingWithExistingLayout4.gif" alt="Layout 4">
 	</p>
+	<ol>
+	<li>Select the menu item <strong>File &gt; New &gt; Project...</strong>. to open the <strong>New Project</strong> wizard.
+	</li>
+	<li>
+        On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. 
+        Click <strong>Next</strong>. 	 
+    </li>
+    <li>On the next page, type &quot;Product1&quot; in the <strong>Project name</strong> field. Click <strong>Next</strong>.
+		<p><img src="../images/qs-WorkingWithExistingLayout41.gif" alt="Source and output folders page"></p>
+	</li>
+	<li>
+		Select &quot;Product1&quot; source folder and click <strong>Edit...</strong>.
+	</li>
+	<li>
+		Click <strong>Create New Folder...</strong>. Type &quot;JavaSourceFiles&quot; in the <strong>Folder name</strong> field. 
+	</li>
+	<li>
+		Click <strong>Advanced</strong>. Check <strong>Link to folder in the file system</strong>. 
+		Click <strong>Browse....</strong> and choose the &quot;JavaSourceFiles&quot; directory in &quot;Product1&quot;.
+		<p><img src="../images/qs-WorkingWithExistingLayout42.gif" alt="Source and output page after setting output"></p>
+	</li>
+	<li>Click <strong>OK</strong> twice to close the two dialogs.
+	</li>
+	<li>
+		Click <strong>Add Folder...</strong>.
+	</li>
+	<li>
+		Click <strong>Create New Folder...</strong>. Type &quot;src-common&quot; in the <strong>Folder name</strong> field. 
+	</li>
+	<li>
+		Click <strong>Advanced</strong>. Check <strong>Link to folder in the file system</strong>. 
+		Click <strong>Browse....</strong> and choose the &quot;JavaSourceFiles&quot; directory in &quot;CommonFramework&quot;.
+		<p><img src="../images/qs-WorkingWithExistingLayout43.gif" alt="Source and output page after setting output"></p>
+	</li>
+	<li>Click <strong>OK</strong> twice to close the two dialogs.
+	</li>
+	<li>
+		Type &quot;Product1/bin&quot; in the <strong>Default output folder</strong> field. 
+		<p><img src="../images/qs-WorkingWithExistingLayout44.gif" alt="Source and output page after setting output"></p>
+	</li>
+    <li>Click <strong>Finish</strong>.
+    </li>
+    <li>Repeat these steps for &quot;Product2&quot;.
+    </li>
+	</ol>
 	
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
@@ -32,7 +77,6 @@
       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-45.htm">Using the Package Explorer</a><br>
-       <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
        <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>       
     </p>
