--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout5.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Remote source and output folder
+      Separate source and output folders
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Remote source and output folder
+      Separate source and output folders
     </h1>
 
 	<p>The source files for the company's product are laid out in one directory "src" and class files are output in another directory "bin":
@@ -37,11 +37,21 @@
 package com.xyz;
 			</pre>
 		</p>
+		<p>
+			<em>Warning: </em>If the preference <strong>Window &gt; Preferences &gt; Java &gt; Compiler &gt Build Path &gt; Scrub output folder on full build</strong>
+			is checked, clicking <strong>Finish</strong> will scrub the &quot;bin&quot; directory in the file system before
+			generating the class files.
 		</p>
     </li>
     <li>Click <strong>Finish</strong>.
     </li>
 	</ol>
+	<p>
+		<em>Note: </em>This solution creates a &quot;.project&quot; file and a &quot;.classpath&quot; file in the 
+		&quot;Product&quot; directory. If you do not wish to have these files in the &quot;Product&quot; directory,
+		you should use linked folders as shown in the 
+		<a href="qs-WorkingWithExistingLayout1.htm">Sibling products in a common source tree</a> section.
+	</p>
 
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
@@ -57,7 +67,6 @@ package com.xyz;
       <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
        <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-45.htm">Using the Package Explorer</a><br>
-       <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
        <a href="../tasks/tasks-26.htm">Creating a new source folder</a><br>
        <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>       
     </p>
