Added global find/replace and updated go to last edit location

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -72,14 +72,6 @@
     </td>
   </tr>
   <tr>
-    <td width="20%" valign="top" align="right"><b>Go to last edit position</b></td>
-    <td width="80%" valign="top" align="left">Press <b>Navigate &gt; Go
-      to Last Edit Position</b> (Ctrl+Q) in any text-based editor to take you back to
-      the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion icon" width="16" height="16">
-      shows up in the toolbar when the Editor Navigation action set is
-      enabled.</td>
-  </tr>
-  <tr>
     <td width="20%" valign="top" align="right"><b>Faster workspace navigation</b></td>
     <td width="80%" valign="top" align="left">Whenever the resource Navigator
       view is visible, <b>Navigate &gt; Open Resource</b> (Ctrl+Shift+R) brings 
@@ -102,6 +94,14 @@
       can press <b>Navigate &gt; Backward</b> (Alt + Left Arrow, or the <img border="0" src="images/backward_nav.gif" alt="Left arrow icon">
       back arrow 
       on the workbench toolbar) to get back. This makes working with lots of open editors a whole lot easier.</td>
+  </tr>
+  <tr>
+    <td width="20%" valign="top" align="right"><b>Go to last edit location</b></td>
+    <td width="80%" valign="top" align="left"><b>Navigate &gt; Go
+      to Last Edit Location</b> (Ctrl+Q) takes you back to
+      the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion icon" width="16" height="16">
+      shows up in the toolbar when the Editor Navigation action set is
+      enabled.</td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Linking view to current open
@@ -320,6 +320,20 @@
         to drill down into changes within the archive.
 	</td>
   </tr> 
+  
+  <tr>
+	<td valign="top" align="right" width="20%">
+		<strong>Global find/replace</strong>
+	</td>
+    <td valign="top" align="left" width="80%">
+        Use <strong>Search &gt; File...</strong> from the global menu and perform the search for the
+        text which should be replaced. In the Search view select the entries that need to be
+        replaced and select <strong>Replace Selected...</strong> from the view's popup menu.
+        <p>
+        It is currently not possible to automatically replace all matches.</p>
+	</td>
+  </tr> 
+
 </table>
 
 <h3>Ant</h3>
