--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
 </head>
 <body>
-<h1> Viewing the Type Hierarchy </h1>
+<h1> Viewing the type Hierarchy </h1>
 <p> In this section, you will learn about using the Hierarchy view by viewing
 classes and members in a variety of different ways. </p>
 <ol>
