--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-OpenJavaEditor.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Opening a Java Editor
+      Opening a Java editor
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Opening a Java Editor
+      Opening a Java editor
     </h1>
     <p>
       In this section, you will learn how to open an editor for Java files.  You will also learn about some of the basic Java editor features.
