--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-114.htm
@@ -31,7 +31,7 @@
          The <strong>New Variable Classpath Entry</strong> dialog appears which shows all available classpath variables.
          You can <strong>Edit...</strong> New... a variable or
         create a new variable with <strong>New...</strong>.<br>
-         <img src="../images/classpathVar.gif" alt="Classpath variable dialog" width="625" height="530"><br>
+         <p><img src="../images/classpathVar.gif" alt="Classpath variable dialog"></p>
       </li>
       <li>
         Press <strong>New...</strong>
