all screenshots to XP & changes according to guidelines from jeem

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -17,8 +17,7 @@
 
 
 <h3>Editing source</h3>
-<table border="1" cellpadding="10" cellspacing="0" width="506"
-	bgcolor="white">
+<table border="1" cellpadding="10" cellspacing="0" width="600">
 	<tbody>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Content assist</b></td>
@@ -26,8 +25,7 @@
 			a list of suggested completions for partially entered strings. In the
 			Java editor press <b>Ctrl+Space</b> or invoke <b>Edit / Content
 			Assist</b>. <br>
-			<img border="0" src="images/code-assist.gif" usemap="#code-assist"
-				alt="Code Assist Selection Dialog">
+			<img border="0" src="images/code-assist.gif" alt="Code Assist Selection Dialog">
 			</td>
 		</tr>
 		<tr>
@@ -35,8 +33,7 @@
 			<td valign="top" align="left" width="80%">With the cursor in a method
 			argument, you can see a list of parameter hints. In the Java Editor
 			press <b>Ctrl+Shift+Space</b> or invoke <b>Edit / Parameter Hints</b>.<br>
-			<img border="0" src="images/parameter-hints.gif" width="477"
-				height="73" alt="Parameter Hint Hover"></td>
+			<img border="0" src="images/parameter-hints.gif" alt="Parameter Hint Hover"></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Content assist on
@@ -54,8 +51,7 @@
 			<td width="20%" valign="top" align="right"><b>Create Getter and Setters</b></td>
 			<td valign="top" align="left" width="80%">To create getter and setter methods for field select the field's declaring type and invoke  <b>Source
 			/ Generate Getter and Setter</b>. <br>
-			<img border="0" src="images/create-getter-setter.gif" width="332"
-				height="133">
+			<img border="0" src="images/create-getter-setter.gif" alt="Generate Getter and Setter Dialog">
 			<br>If you use a name prefix or suffix be sure to specify this in the Code Generation preference page <b>(Window
 			/ Preferences / Java / Code Generation / Names)</b>
 			
@@ -82,8 +78,7 @@
 			<td valign="top" align="left" width="80%">You can define a new template <b>(Preferences
 			/ Java / Editor / Templates)</b> that contains a method stub. Templates are shown
 				together with the  <b>Content Assist (Ctrl+Space)</b> proposals.<br>There are also existing templates 'private_method', 'public_method', 'protected_method' and more.<br>Use the 'tab' keys to navigate between the values to enter (return type, name and arguments)<br>
-			<img border="0" src="images/templates-create-method.gif" width="381"
-				height="85"></td>
+			<img border="0" src="images/templates-create-method.gif" alt="Conent assist showing create method template proposals"></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Use Quick Fix to create
@@ -92,7 +87,7 @@
 			Fix (Ctrl+1)</b>
 				to create the method.<br>
 			<img border="0" src="images/quick-fix-create-method.gif"
-				alt="Create Method Quick Fix"></td>
+				alt="Create method Quick Fix"></td>
 		</tr>
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Use Content Assist to
@@ -127,7 +122,7 @@
 			Implement Methods'</b>, from the source or context menu. This opens
 				a dialog that lets you choose which methods to override.<br>
 			<img border="0" src="images/override-method.gif" width="329"
-				height="195">
+				height="195" alt="Override / Implement method dialog">
 			</td>
 		</tr>
 
@@ -254,11 +249,12 @@
 			to restore any removed members.
 			<p>
 			<img border="0" src="images/localhistory-restore.gif" alt="Restore from local history dialog"></td>
-		</tr>
+		</tr>		
+
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Customizable code
+			<td valign="top" align="right"><b>Customizable code
 			generation</b></td>
-			<td valign="top" align="left" width="80%">The <b>Java / Code
+			<td valign="top" align="left">The <b>Java / Code
 			Generation</b> preference page allows you to customize generated code
 			and comments in a similar way to normal templates. These code
 			templates are used whenever code is generated. (These new templates are replacing
@@ -274,15 +270,15 @@
 			</td>
 		</tr>
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Sort members</b></td>
-			<td valign="top" align="left" width="80%">You can <b>Sort Members</b>
+			<td valign="top" align="right"><b>Sort members</b></td>
+			<td valign="top" align="left">You can <b>Sort Members</b>
 			of a Java compilation unit according to a category order defined in
 			the <b>Java / Appearance / Member Sort Order</b> preference page.<br>
 			You'll find the action under <b>Source / Sort Members</b></td>
 		</tr>
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Find unused code</b></td>
-			<td valign="top" align="left" width="80%">The Java compiler detects
+			<td valign="top" align="right"><b>Find unused code</b></td>
+			<td valign="top" align="left">The Java compiler detects
 			unreachable code, unused variables, parameters, imports and unused
 			private types, methods and fields<br>
 			The setting is on the <b>Java / Compiler</b> preference page.
@@ -296,7 +292,7 @@
 	</tbody>
 </table>
 <h3>Java search</h3>
-<table border="1" cellpadding="10" cellspacing="0" width="506"
+<table border="1" cellpadding="10" cellspacing="0" width="600"
 	bgcolor="white">
 	<tbody>
 		<tr>
@@ -314,7 +310,7 @@
 				alt="Read and write accesses to a field"></td>
 		</tr>
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Search for methods with
+			<td valign="top" align="right"><b>Search for methods with
 			a specific return type</b></td>
 			<td valign="top" align="left" width="80%">
 			<p>To search for methods with a specific return type, use &quot;*
@@ -334,7 +330,7 @@
 	</tbody>
 </table>
 <h3>Code navigation and reading</h3>
-<table border="1" cellpadding="10" cellspacing="0" width="506"
+<table border="1" cellpadding="10" cellspacing="0" width="600"
 	bgcolor="white">
 	<tbody>
 		<tr>
@@ -345,12 +341,12 @@
 			<ul>
 				<li>Select the reference in the code and press <b>F3 (Edit / Open
 				Selected Element)</b></li>
-				<li>Hold <b>Ctrl </b>and move the mouse pointer over the reference<br>
-				<img border="0" src="images/editor-link-style-open.gif"
-					alt="Hyperlink style navigation"> <br>
-				This hyperlink style navigation can be configured in <b>Preferences
-				/ Java / Editor / Navigation</b>.</li>
-			</ul>
+				<li>Hold <b>Ctrl </b>and move the mouse pointer over the reference</li>
+				</ul>
+			<img border="0" src="images/editor-link-style-open.gif"
+				alt="Hyperlink style navigation"><br>The hyperlink style navigation can be configured in <b>Preferences
+			/ Java / Editor / Navigation</b>.
+			
 			</td>
 		</tr>
 		<tr>
@@ -413,8 +409,7 @@
 	</tbody>
 </table>
 <h3>Type hierarchy</h3>
-<table border="1" cellpadding="10" cellspacing="0" width="506"
-	bgcolor="white">
+<table border="1" cellpadding="10" cellspacing="0" width="600">
 	<tbody>	
 		<tr>
 			<td width="20%" valign="top" align="right"><b>Type hierarchy view
@@ -441,10 +436,6 @@
 				horizontal) of the Hierarchy view by using the Menu toolbar button.
 				</li>
 			</ul>
-
-
-
-
 			</td>
 		</tr>
 		<tr>
@@ -470,8 +461,7 @@
 	</tbody>
 </table>
 <h3>Various</h3>
-<table border="1" cellpadding="10" cellspacing="0" width="506"
-	bgcolor="white">
+<table border="1" cellpadding="10" cellspacing="0" width="600">
 	<tbody>	
 		<tr>
 			<td width="20%" valign="top" align="right"><b>JUnit</b></td>
