*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ProjectConfiguration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-ProjectConfiguration.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Creating a Java project to match an existing layout
+      Java project configuration tutorial
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,10 +10,12 @@
   </head>
   <body>
     <h1>
-      Creating a Java project to match an existing layout
+    	Java project configuration tutorial
     </h1>
-    <p>In this section, you will create and configure a new Java project to match some existing layout on the file system. 
-    	Some typical layouts have been identified. Choose the sub-section that matches your layout. 
+    <p>
+    	In this section, you will create and configure a new Java project to use source folders and 
+    	to match some existing layout on the file system. Some typical layouts have been identified. 
+    	Choose the sub-section that matches your layout. 
     </p>
 
     <p>
