--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-WorkingWithExistingLayout4.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Several products sharing common source framework
+      Products sharing a common source framework
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>
-      Several products sharing common source framework
+      Products sharing a common source framework
     </h1>
 
 	<p>The Java source files for two products require a common framework:
