--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-DetectingExistingLayout.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Separate source and output folders
+      Detecting existing layout
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -10,12 +10,12 @@
   </head>
   <body>
     <h1>
-      Separate source and output folders
+      Detecting existing layout
     </h1>
 
 	<p>The source files for the company's product are laid out in one directory "src" and class files are output in another directory "bin":
 	</p>
-	<p><img src="../images/qs-WorkingWithExistingLayout5.gif" alt="Layout 5">
+	<p><img src="../images/qs-DetectingExistingLayout.gif" alt="Existing layout">
 	</p>
 	<ol>
 	<li>Select the menu item <strong>File &gt; New &gt; Project...</strong>. to open the <strong>New Project</strong> wizard.
@@ -27,11 +27,11 @@
     <li>
     	On the next page, type &quot;Product&quot; in the <strong>Project name</strong> field. 
     	Uncheck <strong>Use default</strong>. Click <strong>Browse...</strong> and choose the &quot;Product&quot; directory.
-		<p><img src="../images/qs-WorkingWithExistingLayout51.gif" alt="New Java Project external to workspace"></p>
+		<p><img src="../images/qs-DetectingExistingLayout1.gif" alt="New Java Project external to workspace"></p>
      </li>
      <li>
      	Click <strong>Next</strong>. Ensure that the source and output folders are detected.
-		<p><img src="../images/qs-WorkingWithExistingLayout52.gif" alt="Auto-detection of source and output folders"></p>
+		<p><img src="../images/qs-DetectingExistingLayout2.gif" alt="Auto-detection of source and output folders"></p>
 		<p>NOTE: The auto-detection works only if the source files contain the correct package statement, i.e. for &quot;Main.java&quot;:
 			<pre>
 package com.xyz;
