--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -18,7 +18,8 @@
     includes information about the type hierarchy, references and declarations of Java elements.
     This information is constantly updated as the user changes
     the Java source code. The updating of the internal Java project model is independent of the
-    Java builder.</p>
+    Java builder; in particular, when performing code restructuration, if autobuild is turned
+    off, the model will still reflect the present project contents.</p>
 
     <p>You can organize Java projects in two different ways:</p>
 
