added tip for "show ancestor pane..."

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -527,6 +527,25 @@
       </ol>
     </td>
   </tr>
+  <tr>
+    <td valign="top" align="right" width="20%">
+    	<strong>Show ancestor pane in 3-way compares</strong>
+    </td>
+    <td valign="top" align="left" width="80%"><p CLASS="Head">
+    	Whenever a CVS synchronization results in a conflict, it is helpful
+    	to view the common ancestor on which the two conflicting versions are based.
+    	<p>
+    	You can show the common ancestor by toggling the <strong>Show Ancestor Pane</strong>
+    	button in the compare viewer's local toolbar.
+    	<p>
+       	<img border="0" src="images/compare-showancestor.gif" alt="Show Ancestor Pane button in compare viewer">
+    	<p>
+    	If you always want to have the ancestor pane open automatically for conflicts, 
+    	you can check the option <strong>Initally show ancestor pane</strong> on the
+    	Text Compare tab of the Compare/Patch preference page.
+    	<p>
+    </td>
+  </tr>
 </table>
 
 <p>&nbsp;<br>
