--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -246,7 +246,7 @@
 			so you can restore deleted methods selectively.
 			<p>			
 			Select a container and use <strong>Restore from Local History</strong>
-			to restore any removed members.
+			to restore any removed members. You can restore more than one member at one time.
 			<p>
 			<img border="0" src="images/localhistory-restore.gif" alt="Restore from local history dialog"></td>
 		</tr>		
