--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-116.htm
@@ -24,17 +24,12 @@
       </li>
       <li>
         On the <strong>Libraries</strong> tab, select the class path variable to which you want to attach source.<br>
-         Click the <strong>Attach Source</strong> button to bring up the source attachment page.
+         Expand the node by clicking on the plus and select the node <em>Souce Attachement</em>. Click the <strong>Edit </strong> button to bring up the source attachment dialog.
       </li>
       <li>
-        In <strong>Archive Variable Path</strong> field, use a variable to define the location of the archive. Use
-        the <strong>Variable</strong> button to select an existing variable and the <strong>Browse</strong> button to append an
-        optional path extension.
-      </li>
-      <li>
-        In the <strong>Root Variable Path</strong> field, enter a variable that stores the root path prefix of the JAR file.<br>
-        Click <strong>Variable</strong> to select an existing variable or&nbsp;<strong>Browse</strong> to append an optional path extension.
-      </li>
+        In <strong>Location variable path</strong> field, use a variable to define the location of the archive. Use
+        the <strong>Variable</strong> button to select an existing variable and the <strong>Extension</strong> button to append an
+        optional path extension.</li>
       <li>
         Click <strong>OK</strong>.
       </li>
